--- a/cuml/RF_classification_with_FIL.ipynb
+++ b/cuml/RF_classification_with_FIL.ipynb
@@ -353,8 +353,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 328 ms, sys: 520 ms, total: 848 ms\n",
-      "Wall time: 848 ms\n"
+      "CPU times: user 308 ms, sys: 508 ms, total: 816 ms\n",
+      "Wall time: 815 ms\n"
      ]
     }
    ],
@@ -416,14 +416,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 43.7 s, sys: 12.1 s, total: 55.8 s\n",
-      "Wall time: 17.2 s\n"
+      "CPU times: user 44 s, sys: 12.4 s, total: 56.5 s\n",
+      "Wall time: 17.3 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(n_estimators=25, max_depth=16, handle=<cuml.common.handle.Handle object at 0x7fbae01ee030>, max_features=1.0, n_bins=15, n_streams=4, split_algo=1, split_criterion=0, min_rows_per_node=2, bootstrap=True, bootstrap_features=False, verbose=False, rows_sample=1.0, max_leaves=-1, quantile_per_tree=False)"
+       "RandomForestClassifier(n_estimators=25, max_depth=16, handle=<cuml.common.handle.Handle object at 0x7fd4e94a82d0>, max_features=1.0, n_bins=15, n_streams=4, split_algo=1, split_criterion=0, min_rows_per_node=2, bootstrap=True, bootstrap_features=False, verbose=False, rows_sample=1.0, max_leaves=-1, quantile_per_tree=False)"
       ]
      },
      "execution_count": 8,
@@ -454,8 +454,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.54 s, sys: 308 ms, total: 1.84 s\n",
-      "Wall time: 1.83 s\n"
+      "CPU times: user 1.51 s, sys: 364 ms, total: 1.88 s\n",
+      "Wall time: 1.87 s\n"
      ]
     }
    ],
@@ -498,8 +498,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 49min 19s, sys: 55.2 s, total: 50min 14s\n",
-      "Wall time: 3min 56s\n"
+      "CPU times: user 49min 49s, sys: 1min 2s, total: 50min 52s\n",
+      "Wall time: 3min 58s\n"
      ]
     },
     {
@@ -530,6 +530,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![alt text](waiting_for_training.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Perform prediction on the sklearn RandomForestClassifier model"
    ]
   },
@@ -542,8 +549,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.7 s, sys: 980 ms, total: 16.7 s\n",
-      "Wall time: 1.44 s\n"
+      "CPU times: user 15.7 s, sys: 912 ms, total: 16.6 s\n",
+      "Wall time: 1.54 s\n"
      ]
     }
    ],
@@ -568,8 +575,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy obtained from the cuML model :  0.7290786363636363\n",
-      "The accuracy obtained from the sklearn model :  0.7322036363636364\n"
+      "The accuracy obtained from the cuML model :  0.7296418181818182\n",
+      "The accuracy obtained from the sklearn model :  0.7314272727272727\n"
      ]
     }
    ],
